tests/ui/byte_pool_option_name.stderr
error[E0597]: `name` does not live long enough
  --> tests/ui/byte_pool_option_name.rs:14:22
   |
12 |     let name = CString::new("name").unwrap();
   |         ---- binding `name` declared here
13 |     let mut opts = BytePoolOptions::default();
14 |     opts.name = Some(&name);
   |                      ^^^^^ borrowed value does not live long enough
...
17 | }
   | -
   | |
   | `name` dropped here while still borrowed
   | borrow might be used here, when `pinned` is dropped and runs the `Drop` code for type `BytePoolContext`
   |
   = note: values in a scope are dropped in the opposite order they are defined
